--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </head>
 
 <body>
-    <div class="container">
-        <header>
-            <nav>
+    <header class="header">
+        <div class="container header-container">
+            <nav class="navigation">
                 <a class="header-menu-logo" href="./index.html">Web<span class="logo-parts">Studio</span></a>
                 <ul class="header-menu-list">
                     <li class="header-menu-item">
@@ -42,24 +42,25 @@
                     </li>
                 </ul>
             </address>
-        </header>
-    </div>
+        </div>
+    </header>
 
     <main>
-        <div class="container">
-            <section class="effective">
+        <section class="effective">
+            <div class="container">
                 <h1 class="effective-title">Effective Solutions for Your Business</h1>
                 <button type="button" class="effective-btn">Order Service</button>
-            </section>
-        </div>
+            </div>
+        </section>
 
-        <div class="container">
-            <section class="business">
+        <section class="business">
+            <div class="container">
                 <h2 hidden>Business success</h2>
                 <ul class="business-list">
                     <li class="business-item">
                         <h3 class="business-subtitle">Strategy</h3>
-                        <p class="business-subtitle-text">Our goal is to identify the business problem to walk away with
+                        <p class="business-subtitle-text">Our goal is to identify the business problem to walk away
+                            with
                             the
                             perfect and creative solution.</p>
                     </li>
@@ -71,52 +72,54 @@
                     </li>
                     <li class="business-item">
                         <h3 class="business-subtitle">Diligence</h3>
-                        <p class="business-subtitle-text">Research and confirm brands that present the strongest digital
+                        <p class="business-subtitle-text">Research and confirm brands that present the strongest
+                            digital
                             growth opportunities and minimize risk.</p>
                     </li>
                     <li class="business-item">
                         <h3 class="business-subtitle">Technologies</h3>
-                        <p class="business-subtitle-text">Design practice focused on digital experiences. We bring forth
+                        <p class="business-subtitle-text">Design practice focused on digital experiences. We bring
+                            forth
                             a
                             deep passion for problem-solving.</p>
                     </li>
                 </ul>
-            </section>
-        </div>
+            </div>
+        </section>
 
-        <div class="container">
-            <section class="team">
-                <h2 class="team-title">Our Team</h2>
-                <ul class="team-list">
-                    <li class="team-item">
-                        <img class="team-pictures" src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="264"
-                            height="260">
-                        <h3 class="team-subtitle">Mark Guerrero</h3>
-                        <p class="team-subtitle-text">Product Designer</p>
-                    </li>
-                    <li class="team-item">
-                        <img class="team-pictures" src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="260">
-                        <h3 class="team-subtitle">Tom Ford</h3>
-                        <p class="team-subtitle-text">Frontend Developer</p>
-                    </li>
-                    <li class="team-item">
-                        <img class="team-pictures" src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264"
-                            height="260">
-                        <h3 class="team-subtitle">Camila Garcia</h3>
-                        <p class="team-subtitle-text">Marketing</p>
-                    </li>
-                    <li class="team-item">
-                        <img class="team-pictures" src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264"
-                            height="260">
-                        <h3 class="team-subtitle">Daniel Wilson</h3>
-                        <p class="team-subtitle-text">UI Designer</p>
-                    </li>
-                </ul>
-            </section>
-        </div>
+        <section class="team">
+            <div class="container"></div>
+            <h2 class="team-title">Our Team</h2>
+            <ul class="team-list">
+                <li class="team-item">
+                    <img class="team-pictures" src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="264"
+                        height="260">
+                    <h3 class="team-subtitle">Mark Guerrero</h3>
+                    <p class="team-subtitle-text">Product Designer</p>
+                </li>
+                <li class="team-item">
+                    <img class="team-pictures" src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="260">
+                    <h3 class="team-subtitle">Tom Ford</h3>
+                    <p class="team-subtitle-text">Frontend Developer</p>
+                </li>
+                <li class="team-item">
+                    <img class="team-pictures" src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264"
+                        height="260">
+                    <h3 class="team-subtitle">Camila Garcia</h3>
+                    <p class="team-subtitle-text">Marketing</p>
+                </li>
+                <li class="team-item">
+                    <img class="team-pictures" src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264"
+                        height="260">
+                    <h3 class="team-subtitle">Daniel Wilson</h3>
+                    <p class="team-subtitle-text">UI Designer</p>
+                </li>
+            </ul>
+            </div>
+        </section>
 
-        <div class="container">
-            <section class="portfolio">
+        <section class="portfolio">
+            <div class="container">
                 <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
@@ -156,18 +159,18 @@
                         <p class="portfolio-subtitle-text">Marketing</p>
                     </li>
                 </ul>
-            </section>
-        </div>
-
+            </div>
+        </section>
     </main>
 
-    <div class="container">
-        <footer class="footer">
+    <footer class="footer">
+        <div class="container">
             <a class="footer-logo" href="./index.html">Web<span class="footer-logo-parts">Studio</span></a>
-            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
-                growth solutions.</p>
-        </footer>
-    </div>
-    
+            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing
+                & growth solutions.</p>
+        </div>
+    </footer>
+
 </body>
+
 </html>
