--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
     <main>
         <section class="effective">
-            <div class="container">
-                <h1 class="effective-title">Effective Solutions for Your Business</h1>
+            <div class="container effective-container">
+                <h1 class="effective-title">Effective Solutions<br>for Your Business</h1>
                 <button type="button" class="effective-btn">Order Service</button>
             </div>
         </section>
@@ -88,33 +88,33 @@
         </section>
 
         <section class="team">
-            <div class="container"></div>
-            <h2 class="team-title">Our Team</h2>
-            <ul class="team-list">
-                <li class="team-item">
-                    <img class="team-pictures" src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="264"
-                        height="260">
-                    <h3 class="team-subtitle">Mark Guerrero</h3>
-                    <p class="team-subtitle-text">Product Designer</p>
-                </li>
-                <li class="team-item">
-                    <img class="team-pictures" src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="260">
-                    <h3 class="team-subtitle">Tom Ford</h3>
-                    <p class="team-subtitle-text">Frontend Developer</p>
-                </li>
-                <li class="team-item">
-                    <img class="team-pictures" src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264"
-                        height="260">
-                    <h3 class="team-subtitle">Camila Garcia</h3>
-                    <p class="team-subtitle-text">Marketing</p>
-                </li>
-                <li class="team-item">
-                    <img class="team-pictures" src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264"
-                        height="260">
-                    <h3 class="team-subtitle">Daniel Wilson</h3>
-                    <p class="team-subtitle-text">UI Designer</p>
-                </li>
-            </ul>
+            <div class="container team-container">
+                <h2 class="team-title">Our Team</h2>
+                <ul class="team-list">
+                    <li class="team-item">
+                        <img class="team-pictures" src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="264"
+                            height="260">
+                        <h3 class="team-subtitle">Mark Guerrero</h3>
+                        <p class="team-subtitle-text">Product Designer</p>
+                    </li>
+                    <li class="team-item">
+                        <img class="team-pictures" src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="260">
+                        <h3 class="team-subtitle">Tom Ford</h3>
+                        <p class="team-subtitle-text">Frontend Developer</p>
+                    </li>
+                    <li class="team-item">
+                        <img class="team-pictures" src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264"
+                            height="260">
+                        <h3 class="team-subtitle">Camila Garcia</h3>
+                        <p class="team-subtitle-text">Marketing</p>
+                    </li>
+                    <li class="team-item">
+                        <img class="team-pictures" src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264"
+                            height="260">
+                        <h3 class="team-subtitle">Daniel Wilson</h3>
+                        <p class="team-subtitle-text">UI Designer</p>
+                    </li>
+                </ul>
             </div>
         </section>
 
