--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <main>
         <section class="effective">
             <div class="container effective-container">
-                <h1 class="effective-title">Effective Solutions<br>for Your Business</h1>
+                <h1 class="effective-title">Effective Solutions for Your Business</h1>
                 <button type="button" class="effective-btn">Order Service</button>
             </div>
         </section>
