--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <section class="business">
             <div class="container">
-                <h2 hidden>Business success</h2>
+                <h2 class="visually-hidden">Business success</h2>
                 <ul class="business-list">
                     <li class="business-item">
                         <h3 class="business-subtitle">Strategy</h3>
