--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-container">
             <a class="footer-logo" href="./index.html">Web<span class="footer-logo-parts">Studio</span></a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing
                 & growth solutions.</p>
