--- a/index.html
+++ b/index.html
@@ -90,12 +90,14 @@
         <section class="team">
             <div class="container team-container">
                 <h2 class="team-title">Our Team</h2>
+                <div class="team-wrapper"></div>
                 <ul class="team-list">
                     <li class="team-item">
                         <img class="team-pictures" src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="264"
                             height="260">
-                        <h3 class="team-subtitle">Mark Guerrero</h3>
-                        <p class="team-subtitle-text">Product Designer</p>
+                        <div class="team-content">
+                            <h3 class="team-subtitle">Mark Guerrero</h3>
+                            <p class="team-subtitle-text">Product Designer</p>
                     </li>
                     <li class="team-item">
                         <img class="team-pictures" src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="260">
@@ -113,8 +115,10 @@
                             height="260">
                         <h3 class="team-subtitle">Daniel Wilson</h3>
                         <p class="team-subtitle-text">UI Designer</p>
-                    </li>
-                </ul>
+            </div>
+            </li>
+            </ul>
+            </div>
             </div>
         </section>
 
