--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
                     <li class="team-item">
                         <img class="team-pictures" src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="264"
                             height="260">
-                        <h3 class="team-subtitle">Mark Guerrero</h3>
-                        <p class="team-subtitle-text">Product Designer</p>
+                        <div class="team-content">
+                            <h3 class="team-subtitle">Mark Guerrero</h3>
+                            <p class="team-subtitle-text">Product Designer</p>
                     </li>
                     <li class="team-item">
                         <img class="team-pictures" src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="260">
@@ -113,8 +114,9 @@
                             height="260">
                         <h3 class="team-subtitle">Daniel Wilson</h3>
                         <p class="team-subtitle-text">UI Designer</p>
-                    </li>
-                </ul>
+            </div>
+            </li>
+            </ul>
             </div>
         </section>
 
