--- a/index.html
+++ b/index.html
@@ -97,26 +97,32 @@
                         <div class="team-content">
                             <h3 class="team-subtitle">Mark Guerrero</h3>
                             <p class="team-subtitle-text">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img class="team-pictures" src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="260">
-                        <h3 class="team-subtitle">Tom Ford</h3>
-                        <p class="team-subtitle-text">Frontend Developer</p>
+                        <div class="team-content">
+                            <h3 class="team-subtitle">Tom Ford</h3>
+                            <p class="team-subtitle-text">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img class="team-pictures" src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264"
                             height="260">
-                        <h3 class="team-subtitle">Camila Garcia</h3>
-                        <p class="team-subtitle-text">Marketing</p>
+                        <div class="team-content">
+                            <h3 class="team-subtitle">Camila Garcia</h3>
+                            <p class="team-subtitle-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img class="team-pictures" src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264"
                             height="260">
-                        <h3 class="team-subtitle">Daniel Wilson</h3>
-                        <p class="team-subtitle-text">UI Designer</p>
-            </div>
-            </li>
-            </ul>
+                        <div class="team-content">
+                            <h3 class="team-subtitle">Daniel Wilson</h3>
+                            <p class="team-subtitle-text">UI Designer</p>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </section>
 
