--- a/index.html
+++ b/index.html
@@ -133,38 +133,50 @@
                     <li class="portfolio-item">
                         <img class="portfolio-pictures" src="./images/banking_app.jpg" alt="Banking App" width="360"
                             height="300">
-                        <h3 class="portfolio-subtitle">Banking App</h3>
-                        <p class="portfolio-subtitle-text">App</p>
+                        <div class="portfolio-content">
+                            <h3 class="portfolio-subtitle">Banking App</h3>
+                            <p class="portfolio-subtitle-text">App</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img class="portfolio-pictures" src="./images/cashless_payment.jpg" alt="Cashless Payment"
                             width="360" height="300">
-                        <h3 class="portfolio-subtitle">Cashless Payment</h3>
-                        <p class="portfolio-subtitle-text">Marketing</p>
+                        <div class="portfolio-content">
+                            <h3 class="portfolio-subtitle">Cashless Payment</h3>
+                            <p class="portfolio-subtitle-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img class="portfolio-pictures" src="./images/meditation_app.jpg" alt="Meditation App"
                             width="360" height="300">
-                        <h3 class="portfolio-subtitle">Meditation App</h3>
-                        <p class="portfolio-subtitle-text">App</p>
+                        <div class="portfolio-content">
+                            <h3 class="portfolio-subtitle">Meditation App</h3>
+                            <p class="portfolio-subtitle-text">App</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img class="portfolio-pictures" src="./images/taxi_service.jpg" alt="Taxi Service" width="360"
                             height="300">
-                        <h3 class="portfolio-subtitle">Taxi Service</h3>
-                        <p class="portfolio-subtitle-text">Marketing</p>
+                        <div class="portfolio-content">
+                            <h3 class="portfolio-subtitle">Taxi Service</h3>
+                            <p class="portfolio-subtitle-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img class="portfolio-pictures" src="./images/screen_illustrations.jpg"
                             alt="Screen Illustrations" width="360" height="300">
-                        <h3 class="portfolio-subtitle">Screen Illustrations</h3>
-                        <p class="portfolio-subtitle-text">Design</p>
+                        <div class="portfolio-content">
+                            <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+                            <p class="portfolio-subtitle-text">Design</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img class="portfolio-pictures" src="./images/online_courses.jpg" alt="Online Courses"
                             width="360" height="300">
-                        <h3 class="portfolio-subtitle">Online Courses</h3>
-                        <p class="portfolio-subtitle-text">Marketing</p>
+                        <div class="portfolio-content">
+                            <h3 class="portfolio-subtitle">Online Courses</h3>
+                            <p class="portfolio-subtitle-text">Marketing</p>
+                        </div>
                     </li>
                 </ul>
             </div>
